- fixed UI issue with mini apps list on iOS

--- a/Spixi/Resources/Raw/html/css/spixiui-dark.css
+++ b/Spixi/Resources/Raw/html/css/spixiui-dark.css
@@ -3919,7 +3919,6 @@ img.emoji {
     justify-content: center;
     justify-items: center;
     gap: 16px;
-    height: 100%;
 }
 
 .mini-apps-list-items {
