--- a/Spixi/Resources/Raw/html/css/spixiui-light.css
+++ b/Spixi/Resources/Raw/html/css/spixiui-light.css
@@ -3899,7 +3899,6 @@ img.emoji {
     justify-content: center;
     justify-items: center;
     gap: 16px;
-    height: 100%;
 }
 
 .mini-apps-list-items {
